--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                         <input type="text" name="task" id="task" />
                                         <label for="task">New Task</label>
                                     </div>
-                                    <input type="submit" value="Add Task" class="btn" />
+                                    <input type="submit" value="Add Task" class="btn blue" />
                                 </form>
                             </div>
                         </div>
@@ -32,7 +32,7 @@
                                 <label for="filter">Filter Tasks</label>
                             </div>
                             <ul class="collection"></ul>
-                            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
+                            <a href="#" class="clear-tasks btn red">Clear Tasks</a>
                         </div>
                     </div>
                 </div>
