--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
         <title>Todo List App</title>
     </head>
-    <body>
+    <body style="background-color: rgb(43, 37, 37)">
         <div class="container">
             <div class="row">
                 <div class="col s12">
